# sales-analytics-sql

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  validate_pipeline.py
.github/workflows/: ci.yml
notebooks/: 01_data_loading_and_db_setup.ipynb  02_advanced_sql_analysis.ipynb  03_cohort_analysis.ipynb  04_rfm_segmentation.ipynb  05_powerbi_data_prep.ipynb
powerbi/: README.md
sql/: 01_basic_kpis.sql  02_window_functions.sql  03_cte_queries.sql  04_cohort_analysis.sql  05_rfm_segmentation.sql  06_yoy_growth.sql  schema.sql
src/: __init__.py  analysis.py  db_setup.py  etl.py
tests/: test_analysis.py  test_etl.py
