[project]
name = "sales-analytics-sql"
version = "1.0.0"
description = "Sales performance analytics pipeline on the Olist Brazilian E-Commerce dataset."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Keshav Kashyap" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B), comprehensions (C4)
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = [
    "E501",  # line length is enforced by the formatter, not the linter
]

[tool.ruff.lint.per-file-ignores]
# These modules must run a statement before later imports:
#   validate_pipeline.py -> sys.path.insert(...) so `src` is importable
#   src/analysis.py      -> matplotlib.use("Agg") must precede pyplot import
"validate_pipeline.py" = ["E402"]
"src/analysis.py" = ["E402"]
